	* optimized disk cache
	* optimized .torrent file parsing
	* optimized initialization of storage when adding a torrent
	* added support for adding torrents asynchronously (for improved startup performance)
	* added support for asynchronous disk I/O
	* almost completely changed the storage interface (for custom storage)
	* added support for hashing pieces in multiple threads

	* fix assert when removing a connected web seed
	* fix bug in tracker timeout logic
	* switch UPnP post back to HTTP 1.1
	* support conditional DHT get
	* OpenSSL build fixes
	* fix DHT scrape bug

1.0.3 release

	* python binding build fix for boost-1.57.0
	* add --enable-export-all option to configure script, to export all symbols
	  from libtorrent
	* fix if_nametoindex build error on windows
	* handle overlong utf-8 sequences
	* fix link order bug in makefile for python binding
	* fix bug in interest calculation, causing premature disconnects
	* tweak flag_override_resume_data semantics to make more sense (breaks
	  backwards compatibility of edge-cases)
	* improve DHT bootstrapping and periodic refresh
	* improve DHT maintanence performance (by pinging instead of full lookups)
	* fix bug in DHT routing table node-id prefix optimization
	* fix incorrect behavior of flag_use_resume_save_path
	* fix protocol race-condition in super seeding mode
	* support read-only DHT nodes
	* remove unused partial hash DHT lookups
	* remove potentially privacy leaking extension (non-anonymous mode)
	* peer-id connection ordering fix in anonymous mode
	* mingw fixes

1.0.2 release

	* added missing force_proxy to python binding
	* anonymous_mode defaults to false
	* make DHT DOS detection more forgiving to bursts
	* support IPv6 multicast in local service discovery
	* simplify CAS function in DHT put
	* support IPv6 traffic class (via the TOS setting)
	* made uTP re-enter slow-start after time-out
	* fixed uTP upload performance issue
	* fix missing support for DHT put salt

1.0.1 release
